# tardis_l2_topk

./: README.md  run_generate_report.sh
multi/: Cargo.toml  config.json
multi/src/: main.rs
processing_crate/: Cargo.toml
processing_crate/src/: main.rs
read_bin_generate_report/: Cargo.toml  binance-delivery_BTCUSDT_PERP_20230715_20230725_cross_day_state_check_report.txt  binance-futures_BTCUSDT_20230306_20230315_cross_day_state_check_report.txt  my.txt  okex-swap_BTC-USDT-SWAP_20230715_20230725_cross_day_state_check_report.txt
read_bin_generate_report/src/: main.rs
verify/: Cargo.toml
verify/src/: main.rs
verify_multi/: Cargo.toml
verify_multi/src/: main.rs
