[package]
name = "processing_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.0"
flate2 = "1.0"
csv = "1.1"
colored = "2.0"
chrono = "0.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"